JS: remove overflow-y scroll if it is not necessary (content is not enough tall), fixes #13

--- a/src/FIT/NetopeerBundle/Resources/public/sass/screen.scss
+++ b/src/FIT/NetopeerBundle/Resources/public/sass/screen.scss
@@ -173,7 +173,7 @@ nav#block--topMenu, div#block--topMenu { @include background( linear-gradient(da
 	#alerts-icon { background: #000; float: right; color: #fff; height: 39px; border-left: 1px solid #777; }
 }
 
-nav#block--leftColumn { float: left; width: 10%; border-right: 1px solid #bababa; background: #dadada; @include single-box-shadow(darken(#dadada, 10%), 0px, 0px, 10px, false, true); min-height: 100%; padding: $hNavTop 0px 0px 0px; font-size: 1.3em; position: relative; margin-left: -1px; //overflow-y: scroll;
+nav#block--leftColumn { float: left; width: 10%; border-right: 1px solid #bababa; background: #dadada; @include single-box-shadow(darken(#dadada, 10%), 0px, 0px, 10px, false, true); min-height: 100%; padding: $hNavTop 0px 0px 0px; font-size: 1.3em; position: relative; margin-left: -1px;
 	> *:first-child { margin-top: $sContentPadding; }
 	h3 { padding: 0px $sContentPadding 10px $sContentPadding; font-weight:bold; font-size: 1.1em; border-bottom: 1px solid #888; margin-bottom: 5px; }
 	h4 { margin-top: 25px; padding: 0px $sContentPadding 10px $sContentPadding; font-weight:bold; font-size: 1em; border-bottom: 1px solid #bbb; margin-bottom: 5px; }
@@ -187,7 +187,7 @@ nav#block--leftColumn { float: left; width: 10%; border-right: 1px solid #bababa
 	}
 
 	#history-and-profiles { height: 100%; min-height: 100%; max-width: 100%; position: relative; margin-top: 0px;
-		#block--historyOfConnectedDevices, #block--profilesOfConnectedDevices { position: relative; height: 50%; width: 100%; min-height: 50%; margint-top: 0px; overflow-y: scroll; @include box-sizing(border-box); }
+		#block--historyOfConnectedDevices, #block--profilesOfConnectedDevices { position: relative; height: 50%; width: 100%; min-height: 50%; margint-top: 0px; @include box-sizing(border-box); }
 		#block--historyOfConnectedDevices { height: 50%; padding-top: $sContentPadding; }
 		#block--profilesOfConnectedDevices { border-top: 1px solid #333; padding-top: 5%; height: 50%; }
 		a { position: relative; @include ellipsis(); padding-top: 7px; padding-bottom: 7px;
@@ -202,7 +202,8 @@ nav#block--leftColumn { float: left; width: 10%; border-right: 1px solid #bababa
 	}
 }
 
-body section { float: left; width: 50%; min-height: 100%; padding: $sContentPadding; font-size: 1.4em; overflow-y: scroll; background: #f5f5f5; @include box-sizing(border-box); border-top: $hNavTop solid transparent;
+.scrollable-cover { overflow-y: scroll; }
+body section { float: left; width: 50%; min-height: 100%; padding: $sContentPadding; font-size: 1.4em; background: #f5f5f5; @include box-sizing(border-box); border-top: $hNavTop solid transparent;
 	&.left-nav-defined { width: 45%; }
 
 
